# r2garlic

./: .gitignore  .gitmodules  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
r2plugin/: README.md  config.mk  meson.build  static.cfg
r2plugin/core/: deps.h  deps.mk
src/: memstream.c  memstream.h  r2garlic.c  r2garlic.h
